--- a/ui/CaProperties.ui
+++ b/ui/CaProperties.ui
@@ -147,7 +147,7 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QComboBox" name="temp"/>
+         <widget class="itemCombo" name="temp"/>
         </item>
        </layout>
       </item>
@@ -185,6 +185,11 @@
     <slot>addKvRow()</slot>
     <slot>deleteCurrentRow()</slot>
    </slots>
+  </customwidget>
+  <customwidget>
+   <class>itemCombo</class>
+   <extends>QComboBox</extends>
+   <header>widgets/ItemCombo.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
