--- a/ui/OpenDb.ui
+++ b/ui/OpenDb.ui
@@ -133,7 +133,11 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QLineEdit" name="dbPassword"/>
+      <widget class="QLineEdit" name="dbPassword">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
+      </widget>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_4">
