--- a/ui/CaProperties.ui
+++ b/ui/CaProperties.ui
@@ -147,7 +147,7 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="itemCombo" name="temp"/>
+         <widget class="itemComboTemp" name="temp"/>
         </item>
        </layout>
       </item>
@@ -187,7 +187,7 @@
    </slots>
   </customwidget>
   <customwidget>
-   <class>itemCombo</class>
+   <class>itemComboTemp</class>
    <extends>QComboBox</extends>
    <header>widgets/ItemCombo.h</header>
   </customwidget>
