--- a/ui/OpenDb.ui
+++ b/ui/OpenDb.ui
@@ -7,11 +7,8 @@
     <x>0</x>
     <y>0</y>
     <width>441</width>
-    <height>325</height>
+    <height>292</height>
    </rect>
-  </property>
-  <property name="windowTitle">
-   <string>Dialog</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -148,6 +145,16 @@
      </item>
      <item row="4" column="1">
       <widget class="QLineEdit" name="dbName"/>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Table prefix</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLineEdit" name="prefix"/>
      </item>
     </layout>
    </item>
