--- a/ui/Options.ui
+++ b/ui/Options.ui
@@ -44,12 +44,6 @@
       <layout class="QVBoxLayout" name="verticalLayout_6">
        <item>
         <layout class="QHBoxLayout">
-         <property name="spacing">
-          <number>6</number>
-         </property>
-         <property name="margin">
-          <number>0</number>
-         </property>
          <item>
           <widget class="QLabel" name="label_3">
            <property name="text">
@@ -64,12 +58,6 @@
        </item>
        <item>
         <layout class="QHBoxLayout">
-         <property name="spacing">
-          <number>6</number>
-         </property>
-         <property name="margin">
-          <number>0</number>
-         </property>
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
@@ -90,9 +78,9 @@
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="noColorize">
+        <widget class="QCheckBox" name="disableNetscape">
          <property name="text">
-          <string>Don't colorize expired certificates</string>
+          <string>Disable legacy Netscape extensions</string>
          </property>
         </widget>
        </item>
@@ -116,11 +104,50 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="disableNetscape">
+        <widget class="QCheckBox" name="noColorize">
          <property name="text">
-          <string>Disable legacy Netscape extensions</string>
+          <string>Don't colorize expired certificates</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <layout class="QGridLayout" name="gridLayout">
+         <property name="sizeConstraint">
+          <enum>QLayout::SetDefaultConstraint</enum>
+         </property>
+         <item row="0" column="0" colspan="2">
+          <widget class="QLabel" name="label_2">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Certificate expiry warning threshold</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QLineEdit" name="cert_expiry_num"/>
+         </item>
+         <item row="0" column="3">
+          <widget class="focusCombo" name="cert_expiry_unit"/>
+         </item>
+         <item row="1" column="3">
+          <widget class="focusCombo" name="ical_expiry_unit"/>
+         </item>
+         <item row="1" column="2">
+          <widget class="QLineEdit" name="ical_expiry_num"/>
+         </item>
+         <item row="1" column="0" colspan="2">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Send iCalendar expiry reminder</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <spacer name="verticalSpacer_2">
@@ -150,12 +177,6 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <layout class="QVBoxLayout">
-            <property name="spacing">
-             <number>6</number>
-            </property>
-            <property name="margin">
-             <number>0</number>
-            </property>
             <item>
              <widget class="QComboBox" name="extDNobj"/>
             </item>
@@ -206,12 +227,6 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <layout class="QVBoxLayout" name="_2">
-            <property name="spacing">
-             <number>6</number>
-            </property>
-            <property name="margin">
-             <number>0</number>
-            </property>
             <item>
              <widget class="QComboBox" name="expDNobj"/>
             </item>
@@ -351,6 +366,11 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
    <extends>QComboBox</extends>
    <header>widgets/hashBox.h</header>
   </customwidget>
+  <customwidget>
+   <class>focusCombo</class>
+   <extends>QComboBox</extends>
+   <header>widgets/FocusCombo.h</header>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>hashAlgo</tabstop>
@@ -364,8 +384,8 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>370</x>
-     <y>406</y>
+     <x>376</x>
+     <y>495</y>
     </hint>
     <hint type="destinationlabel">
      <x>109</x>
@@ -380,12 +400,44 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>447</x>
-     <y>394</y>
+     <x>453</x>
+     <y>495</y>
     </hint>
     <hint type="destinationlabel">
      <x>194</x>
      <y>374</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>noColorize</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>cert_expiry_num</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>139</x>
+     <y>241</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>333</x>
+     <y>267</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>noColorize</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>cert_expiry_unit</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>448</x>
+     <y>242</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>529</x>
+     <y>266</y>
     </hint>
    </hints>
   </connection>
