--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -342,6 +342,24 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_7">
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
+         <item>
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Internal Name</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="description">
+           <property name="toolTip">
+            <string>This name is only used internally and does not appear in the resulting certificate</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QGroupBox" name="distNameBox">
          <property name="toolTip">
           <string>Distinguished name</string>
@@ -352,13 +370,6 @@
          <layout class="QVBoxLayout" name="verticalLayout_6">
           <item>
            <widget class="QWidget" name="dnWidget" native="true"/>
-          </item>
-          <item>
-           <widget class="Line" name="Line1_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -423,7 +434,7 @@
          <property name="title">
           <string>Private key</string>
          </property>
-         <layout class="QHBoxLayout">
+         <layout class="QHBoxLayout" name="horizontalLayout_7">
           <item>
            <widget class="itemComboKey" name="keyList">
             <property name="sizePolicy">
@@ -813,8 +824,7 @@
           </widget>
          </item>
          <item row="3" column="2">
-          <widget class="QComboBox" name="aiaOid">
-          </widget>
+          <widget class="QComboBox" name="aiaOid"/>
          </item>
          <item row="3" column="3">
           <widget class="QLineEdit" name="authInfAcc">
