--- a/ui/Options.ui
+++ b/ui/Options.ui
@@ -143,7 +143,7 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
          <item row="1" column="0" colspan="2">
           <widget class="QLabel" name="label_4">
            <property name="text">
-            <string>Send iCalendar expiry reminder</string>
+            <string>Send vCalendar expiry reminder</string>
            </property>
           </widget>
          </item>
