--- a/ui/KeyDetail.ui
+++ b/ui/KeyDetail.ui
@@ -13,12 +13,6 @@
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
      <item>
       <widget class="QLabel" name="tlHeader">
        <property name="font">
@@ -101,7 +95,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="key">
       <attribute name="title">
@@ -234,7 +228,7 @@
         </spacer>
        </item>
        <item>
-        <layout class="QFormLayout" name="formLayout_2">
+        <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="0">
           <widget class="QLabel" name="label_5">
            <property name="text">
@@ -275,7 +269,7 @@
          <property name="title">
           <string>Token information</string>
          </property>
-         <layout class="QFormLayout" name="formLayout">
+         <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="0">
            <widget class="QLabel" name="label_3">
             <property name="text">
