--- a/ui/ExportDialog.ui
+++ b/ui/ExportDialog.ui
@@ -131,7 +131,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <widget class="QFrame" name="exportFormatFrame">
        <property name="frameShape">
@@ -172,9 +172,6 @@
         <enum>QFrame::Sunken</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
-        <property name="spacing">
-         <number>4</number>
-        </property>
         <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
@@ -189,14 +186,38 @@
          </spacer>
         </item>
         <item>
-         <widget class="QLabel" name="TextLabel1">
+         <widget class="QCheckBox" name="pemComment">
           <property name="text">
-           <string>Export Format</string>
+           <string>Export comment into PEM file</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="focusCombo" name="exportFormat"/>
+         <spacer name="verticalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>18</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QLabel" name="TextLabel1">
+            <property name="text">
+             <string>Export Format</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="focusCombo" name="exportFormat"/>
+          </item>
+         </layout>
         </item>
         <item>
          <spacer name="verticalSpacer_2">
