Improve configure script
Fix AC_OUTPUT in configure
Create variables.wxi for version and package name
Also replace package name and version in the Info.plist

--- a/misc/xca.wxs
+++ b/misc/xca.wxs
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  <?define Version="2.2.0"?>
+  <?define VersionNoDot="020200"?>
+  <?define PackageName="X Certificate and Key management"?>
+-->
+<?include variables.wxi ?>
+
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <!--     Note to myself: Version upgrade also needs a new Product ID -->
-    <Product Id="c58b920a-bb90-48b9-b0f8-769e51fdca73" Version="2.2.0"
+    <Product Id="c58b920a-bb90-48b9-b0f8-769e51$(var.VersionNoDot)" Version="$(var.Version)"
              UpgradeCode="23fdacfe-3ef8-45b4-81e8-b0c90244c217"
              Language="1033" Codepage="1252"
              Name="XCA"
@@ -9,7 +16,7 @@
         <Package InstallerVersion="300" Compressed="yes" Id="*" Platform="x64"
                  Keywords="Installer" Description="XCA Installer"
                  Languages="1033" SummaryCodepage="1252"
-                 Comments="XCA - X Certificate and key management"
+                 Comments="$(var.PackageName)"
                  Manufacturer="Christian Hohnstaedt" />
 
 	<MajorUpgrade Schedule="afterInstallInitialize"
@@ -302,7 +309,7 @@
             <Component Id="ApplicationShortcut" Guid="391c2a6f-bfe2-46e3-bcec-0e9413070696">
                 <Shortcut Id="ApplicationStartMenuShortcut"
                           Name="XCA"
-                          Description="X Certificate and key management"
+                          Description="$(var.PackageName)"
                           Target="[#xca.exe]"
                           WorkingDirectory="INSTALLDIR"/>
             </Component>
